src/test/deca/syntax/invalid/test_synt29.deca
//Resultat:
//      Erreur syntaxique : ligne 9
class A{
}
class B extends A{
protected int x;
}
class C extends A{
B b = new B();
int x = b.x;
extends
}